// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common webpack loaders babel-loader should return a config that extends the project's babelrc 1`] = `
Object {
  "loader": "babel-loader",
  "options": Object {
    "cacheDirectory": "/current/dir/.build-cache",
    "envName": "modern",
    "extends": "/current/dir/.babelrc",
  },
}
`;

exports[`Common webpack loaders babel-loader should return a config with the expected BABEL_ENV 1`] = `
Object {
  "loader": "babel-loader",
  "options": Object {
    "cacheDirectory": "/current/dir/.build-cache",
    "envName": "legacy",
    "extends": "/current/dir/.babelrc",
  },
}
`;
